test/good/arrays/in02.px

print true in []
print null not in []
print [] not in [[]]
