test/bad/arrays/comprehension05.px

for x in [true] yield x
